--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,102 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html, body {
+  height: 100%;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-image:
+  linear-gradient(to bottom, rgba(255,255,255, 0.1), rgba(188,188,188, 0.3)),
+  url("../images/bgtile.png");
+  background-repeat:
+    no-repeat,
+    repeat-x;
+  align-items: center;
+}
+
+.full-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 150px 40px 20px 40px;
+  flex: 1 0 auto;
+}
+
+.phones-image {
+  float: left;
+  margin-right: 40px;
+  margin-left: 50px;
+}
+
+.branding-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+.presentation-wrapper {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 5px 30px;
+  border-radius: 5px;
+  color: #191919;
+  width: 400px;
+}
+
+.brand {
+  height: 60px;
+  margin: 0 0 20px 0;
+}
+
+.login-button {
+  display: flex;
+  margin: 10px 10px 35px 0;
+  border-radius: 3px;
+  border: 1px solid #1c5380;
+  background-image: linear-gradient(rgba(28,83,128,0.5), rgba(28,83,128,0.8));
+  color: #DDDDDD;
+  font-size: 0.8em;
+  padding: 0 10px 0 6px;
+  align-items: center;
+}
+
+.login-text {
+  text-shadow: 1px 1px #1c5380;
+  font-weight: bold;
+}
+
+.login-button > img {
+  margin-right: 6px;
+}
+
+.tagline {
+  color: #06365f;
+  font-family: "Helvetica Neue";
+}
+
+.download-button {
+  margin: 20px 20px 0 0;
+}
+
+.footer {
+  flex-shrink: 0;
+  margin-bottom: 60px;
+  text-align: center;
+  color: #9E9E9E;
+  font-weight: bold;
+}
+
+.footer > a:link {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  margin: 0 10px 0 0;
 }
