--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,111 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
 }
+
+
+.phoneimg{
+  margin-top: 5% ;
+}
+
+.rhs{
+margin-top: 5%;
+}
+
+.header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 4% 0 0 10%;
+
+}
+
+
+.login{
+  width:200px;
+  border: solid 1.5px #1c5380;
+  border-radius: 6%;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  height: 7%;
+  margin-left: 12%;
+  vertical-align: text-top;
+  display: flex;
+}
+
+#login{
+  margin-left: 15%;
+}
+
+.frameimg{
+background-image: url("../images/frame.png");
+background-repeat: no-repeat;
+margin: 0 0 0 10%;
+width: 180%;
+}
+
+.frameimg h2{
+padding: 5% 0 0 5%;
+}
+
+p{
+  margin-left: 5%;
+  width: 400px;
+  font-size: 0.9em;
+}
+
+.title-text{
+  font-size: 1.5em;
+  color: #06365f;
+  padding: 5% 0 0 5%;
+
+
+}
+
+.download{
+display: flex;
+flex-direction: row;
+align-items: center;
+margin-left: 19%;
+margin-top: 7%;
+}
+
+#iphone {
+  padding-right: 3%;
+}
+
+.footer{
+  color: #1c5380;
+margin-top: 4%;
+}
+
+
+ul{
+  font-size: 0.7em;
+
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  display: inline;
+}
+
+.copyright {
+  color: grey;
+}
+/*  QUESTIONS
+
+1) ADD THE FADE COLOUR / TEXTURE TO THE LOGIN BUTTON
+2) MOVE THE LOGIN BUTTON SLIGHTLY TO THE RIGHT TO ALIGN WITH WHITE BACKGORUND BOX
+
+ */
