--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,7 +12,11 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  /*background: url("/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/bgtile.png") 1px 0  repeat;*/
+  background: url("/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/bgtile.png") 1px 0  repeat-x;
+}
+
+h1 {
+  color:#06365f;
 }
 
   .iphone-position {
@@ -24,24 +28,51 @@ body {
   .position-title {
     position: absolute;
     top: 100px;
-    left: 450px;
+    left: 475px;
+  }
+  .login-button {
+    background-color: #1c5380;
+    border: 2px solid #06365f;
+    border-radius: 4px;
+    color: white;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    position: relative;
+    bottom: 35px;
+    left: 55px;
+  }
+
+  .login-button a{
+    align-items: center;
   }
 
   .container-content {
+    background-color: white;
     border: 1px solid black;
     border-radius: 5px;
     width: 35%;
     padding: 10px;
-    text-align: center;
+    text-align: left;
     position: absolute;
     top: 200px;
     left: 475px;
   }
 
+  .badge {
+    display: flex;
+    justify-content: center;
+  }
+
   .footer-bottom {
-    flex-shrink: 0;
+    display: flex;
+    justify-content: space-around;
+    word-spacing: 20px;
   }
 
 li {
+  color: #1c5380;
+  list-style: none;
+  text-decoration: none;
   display:inline;
 }
