--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,39 +9,63 @@ body {
   margin: 0;
   background-image: url("../images/bgtile.png");
   background-repeat-y:no-repeat;
-  }
+}
+
+h1 {
+  color:#06365f;
+  font-style: bold;
+}
 
 .layout0{
   display: flex;
   justify-content: center;
+  margin-top: 40px;
 }
 
 .layout1{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .layout2{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .artcleformat{
-  border-size: 1px;
+  border-width: 1px;
   border-color: grey;
   border-style: solid;
   border-radius: 5px;
+  position:relative;
+  top: -10px;
+}
+
+.phonesposition {
+  position: relative;
+  right: 70px;
 }
 
 .iaposition{
   position: relative;
-  right: 70px;
-  top: 100px;
+  right: 50px;
+  top: 70px;
+}
+
+.instapos{
+  position: relative;
+  top: 10px;
+  right: -10px;
 }
 
 .artstyle{
-padding: 10px;
-width: 450px;
-height: 150x;
+padding: 10px 50px 10px 50px;
+width: 370px;
+height: 110x;
 margin: 15px;
+background-color: white
+}
+
+.mainlayoutposition {
+  margin-top:100px
 }
