--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,29 @@ light blue: #1c5380
 */
 
 body {
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  color: black;
+}
+
+h1 {
+  margin: 0;
+  color: #06365f;
+}
+
+div {
+  display=flex:
+}
+
+#right{
+  padding: 10px 40px 30px 500px
+}
+
+footer{
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #1c5380
 }
