final draft with josh's edits

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,93 +9,122 @@ body {
   margin: 0;
 }
 
-.top-background{
-    background: linear-gradient(#6491c4, #1c5380);
-    height: 300px;
+.big-div{
+  position:relative;
+  height: 850px;
 }
 
-#instagram-brand{
-    position: relative;
-    bottom:170px;
-    left: 700px;
+.blue{
+  height: 400px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  position: relative;
+
 }
 
-#login-button{
-    width:100px;
-    height: 50px;
-    color: white;
-    font-size: 22px;
-    font: "Helvetica Neue";
-    background: linear-gradient(#6491c4, #1c5380);
-    border:1px solid #06365f;
-    box-shadow: 0 3px 3px #1c5380;
-    position:relative;
-    bottom: 250px;
-    left: 1150px;
+.main-content{
+  height: 650px;
+  width: 80%;
+  margin: 0px auto 0px;
+  display: block;
+  position: absolute;
+  top:150px;
+  left:150px;
 }
 
-#login-button h6{
-    position:relative;
-    bottom: 20px;
-    float: right;
-    padding-right: 10px;
+
+.phone-image{
+  float:left;
+  width:40%;
 }
 
-#login-button img{
-    position: relative;
-    top: 12px;
-    padding-left: 8px;
+.phone-image img{
+  width:90%;
 }
 
-.phone img{
-    position:relative;
-    bottom: 350px;
-    left: 200px;
+.right-content{
+  float:left;
+  width: 60%;
 }
 
-.main-text{
-    position: relative;
-    bottom: 750px;
-    left: 700px;
+
+.logo{
+  float:left;
+  margin: 0 20px;
 }
 
-#frame {
-    width: 580px;
+.login{
+  height: 30px;
+  width: 100px;
+  margin: 20px;
+  float:right;
+  padding: 10px;
+  color: white;
+  line-height: .5em;
+  text-align: center;
+  border-radius: 2px;
+  background: linear-gradient(#6491c4, #1c5380);
+  border:1px solid #06365f;
+  box-shadow: 0 3px 3px #1c5380;
 }
 
-.main-text h1{
-    width: 400px;
-    color: #06365f;
-    font-size: 28px;
-    padding-left: 60px;
-    position: relative;
-    bottom: 300px;
+.login p{
+  display: inline;
 }
 
-.main-text p{
-    width: 480px;
-    padding:50px;
-    position: relative;
-    bottom: 300px;
+.login img{
+  vertical-align: text-bottom;
+  padding: 0 2px;
 }
 
-#badge-android{
-    position: relative;
-    bottom: 300px;
-    left: 50px;
+.login-content{
+  width:90%;
+  margin:0 auto;
 }
-#badge-iphone{
-    position: relative;
-    bottom: 300px;
-    left: 70px;
+
+.text-content{
+  margin: 0px;
+  clear: both;
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 50px;
+}
+
+.text-content h3{
+  font-size: 2em;
+  color: #06365f;
+}
+
+.text-content p{
+  font-family: helvetica;
+  font-size: 1.2em;
+}
+
+.text-content img{
+  width: 220px;
+  padding: 20px;
 }
 
 .footer{
-    position: relative;
-    bottom: 900px;
-    left: 500px;
+  width: 900px;
+  margin: 50px auto;
+}
+.footer ul{
+  list-style-type: none;
+  display: block;
 }
 
-#bottom-nav{
-    color: #1c5380;
+.footer li{
+  float:left;
+  margin: 20px;
+  color: #1c5380
+
+
+}
+.footer li a{
+  text-decoration: none;
+  font-weight: bold;
+  color: #1c5380
+
 }
