--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,155 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 200;
+  line-height: 1.5;
   margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #4c4c4c;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  margin: 0;
+  font-size: 26px;
+  color: #06365f;
+  margin-bottom: 20px;
+}
+
+p {
+  margin: 0;
+}
+
+.home {
+  padding: 120px 0 30px;
+  background: #06365f; /* Old browsers */
+  background: -moz-linear-gradient(top, #47779D 0%, #47779D 46%, #47779D 46%, #47779D 46%, #47779D 46%, #F6F7F8 46%, #F6F7F8 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #47779D 0%,#47779D 46%,#47779D 46%,#47779D 46%,#47779D 46%,#F6F7F8 46%,#F6F7F8 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #47779D 0%,#47779D 46%,#47779D 46%,#47779D 46%,#47779D 46%,#F6F7F8 46%,#F6F7F8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#47779D', endColorstr='#F6F7F8',GradientType=0 ); /* IE6-9 */
+}
+
+.container {
+  max-width: 75%;
+  margin: auto;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+
+.content-holder {
+  width: 65%;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content-info {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /*background-color: #fff;*/
+  padding: 30px 30px 10px;
+  /*border-radius: 4px;*/
+
+}
+
+/*.holder {
+  position: relative;
+}*/
+
+
+.content-info p {
+  margin-bottom: 10px;
+}
+
+.content-info p:last-of-type {
+  margin-bottom: 30px;
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 16px;
+}
+
+.button {
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  background-color: bisque;
+  border-radius: 4px;
+  background: #6a94b4; /* Old browsers */
+  background: -moz-linear-gradient(top, #6a94b4 0%, #356c96 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #6a94b4 0%,#356c96 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #6a94b4 0%,#356c96 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a94b4', endColorstr='#356c96',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  text-decoration: none;
+  box-shadow: inset 0 0 0 1px #2D628B;
+}
+
+.home-image {
+  margin-right: 10px;
+}
+
+.store-list {
+  display: flex;
+}
+
+.store-item:first-child {
+  margin-right: 20px;
+}
+
+.store-item-link {
+  display: block;
+}
+
+.store-item-link img {
+  display: block;
+}
+
+.navigation {
+  flex: 1;
+  margin-right: 30px;
+  text-transform: uppercase;
+}
+
+.navigation-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navigation-link {
+  color: #47779D;
+  text-decoration: none;
+}
+
+.navigation-link:visited,
+.navigation-link:hover,
+.navigation-link:active {
+  text-decoration: underline;
+}
+
+.footer {
+  max-width: 700px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.copy {
+  text-transform: uppercase;
+  color: gray;
 }
