--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,177 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+/* Resets & Generics */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  box-sizing: border-box;
+  max-height: 100vh;
+}
+
+h1 {
+  font-size: 24px;
+  line-height: 32px;
+  color: #1a507d;
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
+}
+
+.right a {
+  text-decoration: none;
+  color: #f3f6f8;
+  transition: 0.25s color ease-in-out;
+}
+
+.right a:hover {
+  color: #c3c3c3;
+}
+
+section {
+  position: relative;
+}
+
+.gray {
+  color: #c3c3c3
+}
+
+/* Main structure */
+
+.wrap-center {
+  padding-top: 3em;
+}
+
+.panel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin: 0 auto;
+  width: 810px;
+  height: 530px;
+}
+
+.left {
+  position: relative;
+  display: inline-block;
+  width: 320px;
+  height: 530px;
+  margin-right: 2em;
+}
+.right {
+  position: relative;
+  display: inline-block;
+  width: 530px;
+  height: 530px;
+}
+
+/* Visuals */
+
+.tiled-blue {
+  display: inline-block;
+  height: 270px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  left: 0;
+  width: 100%;
+  background-color: #06365f;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+}
+
+.instagram-logo {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  width: 260px;
+}
+
+/* Login button */
+
+.login {
+  width: 100px;
+  height: 45px;
+  position: absolute;
+  font-weight: bolder;
+  top: 20px;
+  right: 0;
+  background: #06365f; /* Old browsers */
+  background: linear-gradient(to bottom, #6D92B0 0%, #49759A 100%);
+  border-radius: 4px;
+  border: 1px solid #2e5a80;
+  box-shadow: 0px 1px 0px 0px #484343;
+}
+
+.login img {
+  margin-top: 14px;
+  width: 22px;
+  margin-left: 12px;
+}
+
+.login-text {
+  position: absolute;
+  top: 12px;
+  font-size: 14px;
+  font-weight: bolder;
+  margin-left: 7px;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+}
+
+/* Right section CTA */
+
+.call-to-action {
+  position: absolute;
+  width: 440px;
+  top: 110px;
+  right: 0;
+  background-color: white;
+  border-radius: 6px;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
+  box-sizing: border-box;
+  padding: 2em;
+}
+
+.call-to-action p {
+  font-size: 15px;
+  text-align: justify;
+}
+
+.call-to-action img {
+  margin-right: 1em;
+  transition: 0.1s linear opacity;
+}
+
+.call-to-action img:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+/* Footer */
+
+footer {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 4px;
+  text-align: center;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+footer ul li {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+footer a {
+  text-decoration: none;
+  color: #4884b7;
+}
+
+footer a:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
