Instagram Copy No Responsive

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,120 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.bluehead {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  height: 280px;
+}
+
+.main {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  width: 80%;
+}
+
+.col-30 {
+  display: inline-block;
+  width: 30%;
+}
+
+.col-30 img {
+  width: 100%;
+}
+
+.col-50 {
+  display: inline-block;
+  width: 50%;
+  margin-left: 10%;
+  margin-top: 50px;
+}
+
+.head-50 {
+  width: 100%;
+  display: inline-block;
+}
+
+.inline {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.brand {
+  margin-right: 150px;
+}
+
+.login {
+  width: 10  0px;
+  height: 40px;
+  color: white;
+  background-color: #49799e;
+  border-width: 0px;
+  border-radius: 5%;
+  font-size: 1em;
+  box-shadow: 0px 0px 4px #06365f;
+}
+
+.login img {
+  vertical-align: middle;
+  margin-right: 5px;
+  display: inline-block;
+}
+
+.login b {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.imgmain {
+  margin: 20px;
+}
+
+.content-50 {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: inline-block
+}
+
+.content-50 h1{
+  color: #06365f;
+  margin-left: 5%;
+  padding: 20px;
+}
+
+.content-50 p {
+  width: 80%;
+  margin-left:10%;
+}
+
+.footer-50 {
+  width: 85%;
+  margin: 0 auto;
+  padding-left: 8%;
+  padding-top: 2%;
+  display: inline-block;
+}
+
+.footer-50 img {
+  margin-right: 6%;
+}
+
+.footer {
+  width: 60%;
+  margin: 30% 0 0 25%;
+  font-weight: bold;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #1c5380;
+  padding: 10px;
+}
+
+.footer p {
+  color: grey;
+  display: inline-block;
+  padding: 10px;
+}
