--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,344 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+#blue-background {
+  background-color: #1c5380;
+  width: 100%;
+  height: 350px;
+  position: absolute;
+}
+
+
+#all {
+  width: 100%;
+  height: 100%;
+  border: 3px solid yellow;
+  margin-top: 100px;
+  position: absolute;
+}
+
+#column1-photos {
+  position: relative;
+  margin-left: 200px;
+  border: 3px solid pink;
+  display: inline-block;
+}
+
+#column2-white {
+position: absolute;
+border: 4px solid green;
+left: 600px;
+right: 300px;
+display: inline-block;
+}
+
+
+.header {
+  border: 3px solid black;
+}
+
+#button {
+display: inline-block;
+position: absolute;
+top: 20px;
+right: 20px;
+height: 50px;
+width: 110px;
+color: white;
+border: 2px solid #06365f;
+background-color: #1c5380;
+border-radius: 5px;
+font-size: 1em;
+
+}
+
+#home-image {
+  display: inline-block;
+  position: absolute;
+  left: 1px;
+  top:4px;
+}
+
+#capture {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+
+}
+
+h1 {
+  color: #1c5380;
+  font-size: 2em;
+}
+
+
+
+#app-store {
+}
+
+#google-play {
+margin-right: 20px;
+}
+
+#footer {
+  text-transform: uppercase;
+  color: #45668e;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+  font-weight: 400;
+  font-size: 1em;
+
+
+
+}
+
+#copyright {
+  color: grey;
+  display: inline-block;
+}
+
+span {
+  border-right: 10px;
+  font-weight: bold;
+}
+
+
+/*
+Colors to use:
+dark blue: #06365f
+light blue: #1c5380
+*/
+
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+
+#blue-background {
+  background-color: #1c5380;
+  width: 100%;
+  height: 350px;
+  position: absolute;
+}
+
+
+#all {
+  width: 100%;
+  height: 100%;
+  border: 3px solid yellow;
+  margin-top: 100px;
+  position: absolute;
+}
+
+#column1-photos {
+  position: relative;
+  margin-left: 200px;
+  border: 3px solid pink;
+  display: inline-block;
+}
+
+#column2-white {
+position: absolute;
+border: 4px solid green;
+left: 600px;
+right: 300px;
+display: inline-block;
+}
+
+
+.header {
+  border: 3px solid black;
+}
+
+#button {
+display: inline-block;
+position: absolute;
+top: 20px;
+right: 20px;
+height: 50px;
+width: 110px;
+color: white;
+border: 2px solid #06365f;
+background-color: #1c5380;
+border-radius: 5px;
+font-size: 1em;
+
+}
+
+#home-image {
+  display: inline-block;
+  position: absolute;
+  left: 1px;
+  top:4px;
+}
+
+#capture {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+
+}
+
+h1 {
+  color: #1c5380;
+  font-size: 2em;
+}
+
+
+
+#app-store {
+}
+
+#google-play {
+margin-right: 20px;
+}
+
+#footer {
+  text-transform: uppercase;
+  color: #45668e;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+  font-weight: 400;
+  font-size: 1em;
+
+
+
+}
+
+#copyright {
+  color: grey;
+  display: inline-block;
+}
+
+span {
+  border-right: 10px;
+  font-weight: bold;
+}
+
+
+
+
+/*
+Colors to use:
+dark blue: #06365f
+light blue: #1c5380
+*/
+
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+
+#blue-background {
+  background-color: #1c5380;
+  width: 100%;
+  height: 350px;
+  position: absolute;
+}
+
+
+#all {
+  width: 100%;
+  height: 100%;
+  border: 3px solid yellow;
+  margin-top: 100px;
+  position: absolute;
+}
+
+#column1-photos {
+  position: relative;
+  margin-left: 200px;
+  border: 3px solid pink;
+  display: inline-block;
+}
+
+#column2-white {
+position: absolute;
+border: 4px solid green;
+left: 600px;
+right: 300px;
+display: inline-block;
+}
+
+
+.header {
+  border: 3px solid black;
+}
+
+#button {
+display: inline-block;
+position: absolute;
+top: 20px;
+right: 20px;
+height: 50px;
+width: 110px;
+color: white;
+border: 2px solid #06365f;
+background-color: #1c5380;
+border-radius: 5px;
+font-size: 1em;
+
+}
+
+#home-image {
+  display: inline-block;
+  position: absolute;
+  left: 1px;
+  top:4px;
+}
+
+#capture {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+
+}
+
+h1 {
+  color: #1c5380;
+  font-size: 2em;
+}
+
+
+
+#app-store {
+}
+
+#google-play {
+margin-right: 20px;
+}
+
+#footer {
+  text-transform: uppercase;
+  color: #45668e;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+  font-weight: 400;
+  font-size: 1em;
+
+
+
+}
+
+#copyright {
+  color: grey;
+  display: inline-block;
+}
+
+span {
+  border-right: 10px;
+  font-weight: bold;
+}
