--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,32 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  }
+.blue{
+background-color: #1c5380;
+height: 400px;
+width: auto;
+
+.floating-box{
+    display: inline-block;
+    width: 150px;
+    height: 75px;
+    margin: 50px;
+  }
+  .instaLogo{
+  display: inline-block;
+  position: relative;
+  bottom: 100px;
+  vertical-align: middle;
+  }
+
+  .footer{
+    height: 100px;
+    text-align: center;
+
+li {
+    display: inline;
+    text-transform: uppercase;
+    list-style-type: none;
+    padding: 5px;
 }
