--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,114 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue {
+  width: 100%;
+  height: 320px;
+  background-color: #3E6889;
+}
+
+.container {
+  display: inline-block;
+  position: relative;
+  width: 70%;
+  margin: 10% 15%;
+}
+
+.left {
+  display: inline-block;
+  padding: 0;
+  width: 36%;
+}
+
+.right {
+  display: inline-block;
+  position: absolute;
+  width: 55%;
+  margin-left: 9%;
+}
+
+.instagram {
+  display: inline-block;
+  padding: 0;
+  width: 82%;
+}
+
+.login {
+  display: inline-block;
+  position: absolute;
+  width: 18%;
+  vertical-align: middle;
+}
+
+h1 {
+  display: inline-block;
+  margin-top: 0;
+}
+
+.button {
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+  color: #fff;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+  vertical-align: text-bottom;
+  padding: 8px;
+  margin-top: 15px;
+}
+
+.grad {
+    background: #3E6889; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#688FAA, #3E6889); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#688FAA, #3E6889); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#688FAA, #3E6889); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#688FAA, #3E6889); /* Standard syntax */
+}
+
+.image-button {
+  padding-right: 5px;
+  vertical-align: middle;
+}
+
+h2 {
+  color: #06365f;
+  font-size: 1.5em;
+  margin-top: 15px;
+}
+
+.text-right {
+  background-image: url(../images/frame.png);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.text-right-inside {
+  display: inline-block;
+  padding: 20px 40px;
+}
+
+.image-margin {
+  margin-right: 15px;
+}
+
+.images-button {
+  padding-top: 10px;
+}
+
+.footer-links {
+  display: inline-block;
+  padding: 0;
+  position: relative;
+  margin: 10% 10% 0 10%;
+}
+
+.footer-links li {
+  display: inline-block;
+  margin: 0 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  color: #1c5380;
+}
