--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,106 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+a{
+  text-decoration: none;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.full-container{
+  width: 100%;
+  max-width: 100%;
+  position:relative;
+}
+.container{
+  margin: 0 auto;
+  width: 1024px;
+  padding-top:90px;
+
+}
+.header-background{
+  height: 300px;
+  position:absolute;
+  background-color: #517fa4;
+  width: 100%;
+  top: 0px;
+  left:0px;
+  z-index:-1;
+}
+
+
+.box-left,.box-right{
+  box-sizing: content-box;
+  display: inline-block;
+  max-width: 550px;
+  padding: 35px;
+  z-index:100;
+}
+.box-right{
+
+} 
+.subtitle{
+  color:#517fa4;
+  font-size: 1.8em;
+  max-width: 290px;
+}
+.text{
+
+  padding: 40px;
+  border-radius: 5px;
+ /* box-shadow: 0px -4px 16px -2px rgba(0,0,0,0.7);
+  background: linear-gradient(#666666, #000000);*/
+ background-image: url("../images/frame.png");
+ background-size:contain;
+ background-repeat: no-repeat;
+}
+.title-div{
+  margin:20px 0px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.title{
+  display: inline-block;
+}
+
+
+.login-div_button{
+  padding:10px 20px;
+  background: linear-gradient(#5391BD,#517fa4,#517fa4);
+  border:solid 1px #256FA8;
+  border-radius: 4px;
+}
+.login-div{
+  display: flex;
+  align-items:center;
+}
+.login_img img{
+  width: 25px;
+  height: auto;
+  margin-right: 10px;
+  display: inline-block;
+}
+.login-div_button{
+  color: white;
+  font-weight: bold;
+  display: inline-block;
+ }
+.menu-footer{
+  text-align: center;
+  margin-top: 50px;
+}
+.menu-footer ul{
+  padding: 0px;
+}
+.menu-footer li{
+  display: inline-block;
+  list-style: none;
+  color:#517fa4;
+  font-weight: bold;
+  padding: 10px 8px;
+}
+.menu-footer li.copyright{
+color:#ACACAC;
 }
