--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,167 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+.blue {
+  position: absolute;
+  margin-top: 0;
+  background-color: #06365f;
+  height: 250px;
+  width: 100%;
+  z-index: 3;
+}
+
+.main{
+  position: absolute;
+  z-index: 4;
+  width: 80%;
+  height: 80%;
+  text-align: center;
+  display: inline-block;
+  margin-left: -150px;
+
+
+}
+
+.relative{
+  position: relative;
+  margin: 100px auto;
+}
+
+.phones{
+  margin-top: 0px;
+  display: inline-block;
+  height: 600px;
+  background-image: url(../images/phones.png);
+  background-repeat: no-repeat;
+  width: 33%;
+
+}
+
+.text{
+  position: absolute;
+  margin-top: 0px;
+  display: inline-block;
+  width: 50%;
+  height: 600px;
+  margin: 0 20px;
+
+}
+
+.text-top{
+  display: inline-block;
+  width: 100%;
+  height: 100px;
+}
+
+.instagram{
+  width: 450px;
+  height: auto;
+  background-image: url(../images/brand.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: left;
+  display: inline-block;
+
+
+}
+
+.trans{
+  color: transparent;
+}
+
+.login{
+  background-color: #1c5380;
+  display: inline-block;
+  width: 100px;
+  padding: 3px;
+  border: solid 1px navy;
+
+  }
+
+.login p{
+  display: inline;
+  color: white;
+
+}
+
+.login img{
+  vertical-align: middle;
+}
+
+.article{
+  display: inline-block;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 20px;
+
+}
+
+.article img{
+  display: inline-block;
+}
+
+.article p{
+  text-align: left;
+}
+h3{
+  color: #06365f;
+  text-align: left;
+  font-size: 1.7em;
+}
+
+.blacks{
+  text-align: left;
+}
+
+.button{
+  width: 150px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-width: 0px;
+  border-radius: 5px;
+
+}
+.buttonA{
+  background-image: url(../images/badge-iphone.png);
+}
+
+.buttonB{
+  background-image: url(../images/badge-android.png);
+}
+
+footer{
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  bottom: 0px;
+}
+ul{
+  list-style: none;
+  text-decoration: none;
+  margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  word-spacing: 0.7em;
+
+}
+
+ul li {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 0.75em;
+
+
+}
+
+ul li a{
+  display: inline-block;
+  text-decoration: none;
+
+}
