--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,67 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue {
+  background-color: #568dba;
+  background-size: 100%;
+  width: 100%;
+  height: 400px;
+  position: absolute;
+}
+
+.img {
+  display: inline-block;
+  position: relative;
+  padding-left: 260px;
+  padding-top: 100px;
+}
+
+.header {
+  display: inline-block;
+  text-align: right;
+  position: absolute;
+  padding-top: 120px;
+  padding-left: 30px;
+}
+
+.login {
+  background: url("images/home.png");
+  background-color: #1c5380;
+  width: 90px;
+  height: 35px;
+  color: white;
+  margin-left: 20px;
+  text-align: center;
+  padding-left: 10px;
+  }
+
+.content {
+  text-align: left;
+  display: inline-block;
+  padding-left: 50px;
+  width: 450px;
+  position: relative;
+  background-color: white;
+  height: 100%;
+  margin: 30px;
+}
+
+.title {
+  color: #1c5380;
+}
+
+.buttons {
+  padding-top: 10px;
+}
+
+.about {
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  padding-top: 70px;
+}
+
+a {
+  padding: 10px;
+}
