lab-css-instagram-clone -- finished
subida la imagen del resultado de la maquetación y añadidos los enlaces al menu del footer

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -103,6 +103,9 @@ body {
   font-weight: bold;
   padding: 10px 8px;
 }
+.menu-footer li a{
+  color:#517fa4;
+}
 .menu-footer li.copyright{
 color:#ACACAC;
 }
